--- a/src/styles.css
+++ b/src/styles.css
@@ -56,17 +56,88 @@
 	margin: 2px;
 }
 
+.card_building_div {
+	position: top;
+	bottom: 0px;
+	left: 0px;
+	padding: 3px;
+	margin: 2px;
+	color: #666699;
+}
+
+.card_unit_img {
+	position: absolute;
+	width: 60px;
+	height: 60px;
+	bottom: 14px;
+	left: 0px;
+	padding: 3px;
+	margin: 2px;
+	color: #666699;
+}
+
+.core {
+	padding: 0px;
+	margin: 0px;
+	color: rgb(165, 167, 105)
+}
+
+.foundry {
+	padding: 0px;
+	margin: 0px;
+	color: rgb(197, 106, 106)
+}
+
+.advancedfoundry {
+	padding: 0px;
+	margin: 0px;
+	color: rgb(197, 106, 106)
+}
+
+.starforge {
+	padding: 0px;
+	margin: 0px;
+	color: rgb(130, 110, 202)
+}
+
+.advancedstarforge {
+	padding: 0px;
+	margin: 0px;
+	color: rgb(98, 119, 212)
+}
+
+.grey {
+	background-color: grey;
+}
+
 #unitContainer {
 	background-color: rgb(9, 4, 22);
 	width: 50%;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	font-weight: bold;
-	color: rgb(255, 226, 164);
+}
+
+#cardRemainingContainer {
+	width: 10%;
+	display: flex;
+	flex-direction: column;
+	background-color: #333333;
+}
+
+#deckDescriptionContainer {
+	width: 50%;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	background-color: #333333;
 }
 
 body {
 	background-color: black;
+	display: flex;
+	flex-direction: row;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-weight: bold;
+	color: rgb(255, 226, 164);
 }
