--- a/src/styles.css
+++ b/src/styles.css
@@ -122,7 +122,7 @@
 	width: 10%;
 	display: flex;
 	flex-direction: column;
-	background-color: #333333;
+	background-color: #120920;
 }
 
 #deckDescriptionContainer {
@@ -130,7 +130,7 @@
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	background-color: #333333;
+	background-color: #0f0e13;
 }
 
 body {
