new unit data structure

--- a/src/styles2.css
+++ b/src/styles2.css
@@ -141,11 +141,11 @@ td {
 	background-color: #00000022;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	font-size: 12px;
+	text-align: center;
 }
 
 .unit_table_cell_stats {
 	background-color: #00000022;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	font-size: 14px;
-	font-weight: bold;
+	font-size: 12px;
 }
