--- a/src/styles2.css
+++ b/src/styles2.css
@@ -8,12 +8,19 @@ body {
 }
 
 
+table {
+	margin: 0px;
+	border-collapse: collapse
+}
+
 th {
-	font-size: 14px;
+	font-size: 16px;
 	font-weight: normal;
 	font-variant-caps: all-small-caps;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	padding: 0px 4px 0px 4px;
 }
+
 
 td {
 	border-width: 1px;
@@ -21,8 +28,41 @@ td {
 	font-weight: normal;
 	border-color: black;
 	border-style: none;
-
+	padding: 5px;
 }
+
+input {
+	background-color: rgba(0, 0, 0, 0.7);
+	border-width: 1px;
+	color: yellow;
+	font-variant-caps: all-small-caps;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+button {
+	background-color: rgba(39, 39, 39, 0.7);
+	color: rgb(255, 255, 255);
+	font-variant-caps: all-small-caps;
+	font-style: bold;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	border-radius: 8px;
+	border-width: 1px;
+	border-color: rgb(117, 117, 117);
+	border-style: double;
+}
+
+select {
+	background-color: rgba(39, 39, 39, 0.7);
+	color: rgb(255, 255, 255);
+	border-radius: 8px;
+	border-width: 1px;
+	border-color: rgb(117, 117, 117);
+	border-style: double;
+	font-variant-caps: all-small-caps;
+	font-style: bold;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 
 
 .view {
@@ -59,6 +99,7 @@ td {
 	border-width: 1px;
 	border-color: black;
 	border-style: solid;
+	scrollbar-color: rgba(227, 239, 252, 0.637) rgba(12, 12, 12, 0.445);
 }
 
 .header_element {
@@ -79,6 +120,7 @@ td {
 #wrapper {
 	position: absolute;
 	background-image: url('images/a1.png');
+	background-position: center center;
 	background-size: cover;
 	border-width: 1px;
 	border-color: white;
@@ -121,8 +163,8 @@ td {
 	margin: 5px;
 	left: 0px;
 	right: 0px;
-	top: 60%;
-	bottom: 0px;
+	top: 30%;
+	bottom: 10%;
 }
 
 
@@ -138,42 +180,35 @@ td {
 #stats_view-v {
 	background-color: #8ecb9988;
 	margin: 5px;
-	height: 30%;
+	height: 10%;
 	left: 0px;
 	right: 0px;
-	top: 30%;
+	top: 89.5%;
+	bottom: 0px;
 }
 
 .unit_table {
-	border-color: black;
-	border-width: 2px;
-	border-style: solid;
 	position: relative;
 	top: 0px;
+	width: 100%;
 }
 
 #unit_table_head {
 	position: sticky;
-	background-color: black;
-	border-color: black;
-	border-width: 2px;
-	border-style: solid;
-	top: 1px;
+	background-color: rgb(34, 34, 34);
+	top: -1px;
 }
 
 .unit_table_cell {
 	background-color: #00000022;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	font-size: 12px;
+	font-size: 14px;
 	text-align: center;
 	padding: 0px 6px 0px 6px;
 }
 
-.unit_table_cell_stats {
-	background-color: #00000022;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	font-size: 12px;
-	font-style: bold;
+.unit_table_cell_alt {
+	background-color: #72727222;
 }
 
 .unit_table_image_traits {
@@ -216,4 +251,21 @@ td {
 	flex-wrap: wrap;
 	margin: 5px;
 	overflow: hidden;
+}
+
+.deck_stats_div {
+	font-size: 16px;
+	width: 300px;
+	border: 0px;
+	border-style: solid;
+	padding: 5px;
+}
+
+.deck_stats_table {
+	width: 300px;
+}
+
+.deck_stats_td {
+	padding: 0px;
+	margin: 0px;
 }
