--- a/src/styles2.css
+++ b/src/styles2.css
@@ -1,34 +1,34 @@
 body {
-	font-variant-caps: all-small-caps;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	background-color: black;
 	margin: 0;
 	padding: 0;
+	font-weight: normal;
 	color: white;
 }
 
 
 table {
 	margin: 0px;
+	padding: 0px 0px 0px 0px;
 	border-collapse: collapse
 }
 
 th {
-	font-size: 16px;
-	font-weight: normal;
-	font-variant-caps: all-small-caps;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	padding: 0px 4px 0px 4px;
+	font-size: 18px;
+	padding: 0px 2px 0px 2px;
 }
 
 
 td {
+	font-size: 18px;
 	border-width: 1px;
-	font-variant-caps: all-small-caps;
-	font-weight: normal;
 	border-color: black;
 	border-style: none;
-	padding: 5px;
+}
+
+tr {
+	height: 20px;
 }
 
 input {
@@ -36,19 +36,19 @@ input {
 	border-width: 1px;
 	color: yellow;
 	font-variant-caps: all-small-caps;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 button {
+	font-size: 14px;
+	font-variant: all-small-caps;
+	font-style: bold;
 	background-color: rgba(39, 39, 39, 0.7);
 	color: rgb(255, 255, 255);
-	font-variant-caps: all-small-caps;
-	font-style: bold;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	border-radius: 8px;
+	border-radius: 10px;
 	border-width: 1px;
-	border-color: rgb(117, 117, 117);
+	border-color: rgb(255, 255, 255);
 	border-style: double;
+	height: 60%;
 }
 
 select {
@@ -60,7 +60,6 @@ select {
 	border-style: double;
 	font-variant-caps: all-small-caps;
 	font-style: bold;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 
@@ -107,14 +106,36 @@ select {
 }
 
 .unit_table_header_image {
-	width: 18px;
-	width: 18px;
+	width: 20px;
+	height: 20px;
 }
 
 
-.unitTableImage {
-	width: 24px;
-	height: 24px;
+.unit_table_image {
+	width: 42px;
+	height: 42px;
+
+}
+
+#statsdiv {
+	width: 300px;
+	border-width: 2px;
+	border: none;
+	border-color: white;
+}
+
+#statsunitname {
+	position: absolute;
+	top: 300px;
+}
+
+#statswrapper {
+	display: flex;
+	flex-wrap: wrap;
+	width: 700px;
+	border-width: 1px;
+	border: none;
+	border-color: black;
 }
 
 #wrapper {
@@ -164,7 +185,7 @@ select {
 	left: 0px;
 	right: 0px;
 	top: 30%;
-	bottom: 10%;
+	bottom: 30%;
 }
 
 
@@ -180,47 +201,44 @@ select {
 #stats_view-v {
 	background-color: #8ecb9988;
 	margin: 5px;
-	height: 10%;
+	height: 30%;
 	left: 0px;
 	right: 0px;
-	top: 89.5%;
+	top: 70.%;
 	bottom: 0px;
-}
-
-.unit_table {
-	position: relative;
-	top: 0px;
-	width: 100%;
 }
 
 #unit_table_head {
 	position: sticky;
 	background-color: rgb(34, 34, 34);
 	top: -1px;
+	height: 30px;
 }
 
 .unit_table_cell {
 	background-color: #00000022;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	font-size: 14px;
 	text-align: center;
-	padding: 0px 6px 0px 6px;
 }
 
 .unit_table_cell_alt {
 	background-color: #72727222;
 }
 
-.unit_table_image_traits {
-	width: 18px;
-	height: 18px;
-	padding: 2px;
+.unit_table_image_small {
+	width: 32px;
+	height: 32px;
 }
 
 .unit_table_cell_traits {
-	width: 50px;
+	width: 100px;
 }
 
+.table_add_unit_button {
+	width: 100%;
+	height: 36px;
+	font-style: bold;
+	font-size: 18px;
+}
 
 .deckSlotImage {
 	width: 60px;
@@ -268,4 +286,19 @@ select {
 .deck_stats_td {
 	padding: 0px;
 	margin: 0px;
+}
+
+#deck2_button {
+	color: grey;
+	border-color: grey;
+}
+
+#compare_button {
+	color: grey;
+	border-color: grey;
+}
+
+#unit_view_card_btn {
+	color: grey;
+	border-color: grey;
 }
