--- a/src/styles2.css
+++ b/src/styles2.css
@@ -87,7 +87,7 @@ select {
 
 
 .view_content {
-	overflow: auto;
+	overflow: inherit;
 	background-color: #000000aa;
 	position: inherit;
 	margin: 5px;
@@ -124,6 +124,8 @@ select {
 }
 
 #chartDiv {
+	position: relative;
+	left: 50%;
 	background-color: rgba(0, 0, 0, 0.329);
 	width: 90px;
 	height: 36px;
@@ -135,23 +137,29 @@ select {
 }
 
 #statsunitname {
-	position: absolute;
 	top: 300px;
 }
 
 #statsChartContainer {
-	flex-wrap: wrap;
-	width: 700px;
+	width: 100%;
 	border-width: 1px;
 	border: none;
+	border-color: rgb(255, 255, 255);
+}
 
-	border-color: black;
+#unitVideo {
+	position: absolute;
+	top: -50px;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
 }
 
 .barchart {
 	position: absolute;
 	width: 100px;
 	left: 24px;
+	overflow: hidden;
 }
 
 
@@ -166,6 +174,7 @@ select {
 	bottom: 5px;
 	left: 0px;
 	right: 5px;
+	overflow: hidden;
 }
 
 #sidebar {
@@ -179,12 +188,17 @@ select {
 	right: 0px;
 }
 
-#sidebar_footer_div {
+
+.sidebar_footer_div {
 	position: absolute;
 	bottom: 0px;
 	padding: 5px;
 	font-size: 12px;
 	color: rgb(158, 158, 158);
+}
+
+.extraSmallFont {
+	font-size: 8px;
 }
 
 #toggleSidebarButton {
@@ -198,6 +212,7 @@ select {
 }
 
 #unit_view-h {
+	overflow: auto;
 	background-image: 'images/a1.png';
 	background-color: #cb8e8e88;
 	margin: 3px;
@@ -223,6 +238,7 @@ select {
 	top: 50%;
 	right: 0px;
 	bottom: 0px;
+	overflow: hidden;
 }
 
 #unit_view-v {
@@ -252,6 +268,7 @@ select {
 	right: 0px;
 	top: 70.%;
 	bottom: 0px;
+	overflow: hidden;
 }
 
 #unit_table_head {
