--- a/src/styles2.css
+++ b/src/styles2.css
@@ -123,36 +123,51 @@ select {
 	transform: translate(0, 20%);
 }
 
-#chartDiv {
-	position: relative;
-	left: 50%;
+.chartDiv {
 	background-color: rgba(0, 0, 0, 0.329);
-	width: 90px;
+	width: 92px;
 	height: 36px;
 	margin: 3px;
 	padding: 3px;
 	border-width: 2px;
 	border: none;
 	border-color: white;
+	z-index: 10;
 }
 
-#statsunitname {
-	top: 300px;
+#statsUnitName {
+	position: absolute;
+	border-width: 1px;
+	border: none;
+	left: 10%;
+	top: 10%;
+	border-color: rgb(255, 255, 255);
+	z-index: 10;
+	font-style: bold;
+	font-size: xx-large;
+	font-variant: small-caps;
 }
 
 #statsChartContainer {
-	width: 100%;
+	position: absolute;
 	border-width: 1px;
-	border: none;
-	border-color: rgb(255, 255, 255);
+	border: solid;
+	right: 10%;
+	top: 10%;
+	border-color: rgb(0, 0, 0);
+	z-index: 10;
 }
 
 #unitVideo {
-	position: absolute;
-	top: -50px;
+	position: relative;
+	left: 0px;
 	width: 100%;
-	height: 100%;
 	overflow: hidden;
+	z-index: 0;
+	border-width: 1px;
+	border: none;
+	border-color: rgb(255, 255, 255);
+	transform: translate(0, -10%);
 }
 
 .barchart {
@@ -223,6 +238,7 @@ select {
 }
 
 #deck_view-h {
+	overflow: auto;
 	background-color: #cbc48e88;
 	margin: 3px;
 	left: 50%;
@@ -242,6 +258,7 @@ select {
 }
 
 #unit_view-v {
+	overflow: auto;
 	background-color: #cb8e8e88;
 	margin: 5px;
 	left: 0px;
@@ -252,6 +269,7 @@ select {
 
 
 #deck_view-v {
+	overflow: auto;
 	background-color: #cbc48e88;
 	margin: 5px;
 	height: 30%;
