--- a/src/styles2.css
+++ b/src/styles2.css
@@ -124,7 +124,7 @@ select {
 }
 
 .chartDiv {
-	background-color: rgba(0, 0, 0, 0.329);
+	background-color: rgba(0, 0, 0, 0.5);
 	width: 92px;
 	height: 36px;
 	margin: 3px;
@@ -140,34 +140,42 @@ select {
 	border-width: 1px;
 	border: none;
 	left: 10%;
-	top: 10%;
+	bottom: 10%;
 	border-color: rgb(255, 255, 255);
+	background-color: rgba(0, 0, 0, 0.5);
+	padding: 5px 25px 5px 25px;
 	z-index: 10;
 	font-style: bold;
-	font-size: xx-large;
+	font-size: x-large;
 	font-variant: small-caps;
 }
 
 #statsChartContainer {
 	position: absolute;
 	border-width: 1px;
-	border: solid;
+	border: none;
 	right: 10%;
 	top: 10%;
 	border-color: rgb(0, 0, 0);
+	background-color: rgba(255, 255, 255, 0.185);
 	z-index: 10;
 }
 
 #unitVideo {
-	position: relative;
-	left: 0px;
-	width: 100%;
+	position: absolute;
+	min-width: 100%;
+	min-height: 100%;
+	max-width: 110%;
+	max-height: 125%;
+	bottom: 0;
+	width: auto;
+	height: auto;
 	overflow: hidden;
+	background-size: cover;
 	z-index: 0;
 	border-width: 1px;
 	border: none;
 	border-color: rgb(255, 255, 255);
-	transform: translate(0, -10%);
 }
 
 .barchart {
