--- a/src/styles.css
+++ b/src/styles.css
@@ -1,305 +1,426 @@
-/*#tag divs*/
-
-#leftDiv {
-	background-color: bisque;
-	display: flex;
-	font-size: smaller;
-}
-
-#rightDiv {
-	background-color: red;
-	display: flex;
-}
-
-#unitStats {
-	background-color: black;
-	color: white;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	font-weight: 400;
-	font-size: smaller;
-}
-
-#deckGrid {
-	width: 480px;
-	height: 240px;
-}
-
-#unitContainer {
-	background-color: rgb(9, 4, 22);
-	width: 100%;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-}
-
-#cardRemainingContainer {
-	width: 30%;
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: column;
-	background-color: #120920;
-	border: solid 1px rgb(155, 153, 144);
-}
-
-#deckDisplay {
-	display: flex;
-	flex-direction: column;
-	background-color: rgb(9, 12, 26);
-	border: solid 1px rgb(155, 153, 144);
-}
-
-#deckDescriptionContainer {
-	width: 100%;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	color: white;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	font-weight: lighter;
-	font-size: 14;
-	background-color: #0f0e13;
-	border: solid 1px rgb(155, 153, 144);
-}
-
-/*#tag elements*/
-
-/*horizontal layout*/
 body {
-	background-color: black;
-	display: flex;
-	flex-wrap: wrap;
-	max-width: 1400px;
-	flex-direction: row;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	font-weight: bold;
-	color: rgb(255, 226, 164);
-	border: solid 1px rgb(43, 12, 129);
-}
-
-#body-h {
 	background-color: black;
-	display: flex;
-	flex-direction: row;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	font-weight: bold;
-	color: rgb(255, 226, 164);
-	border: solid 1px rgb(155, 153, 144);
-}
-
-#deckDescription-h {
-	width: 10%;
-}
-
-#deckDescription-v {
-	width: 50%;
-}
-
-#unitContainer-h {
-	background-color: rgb(9, 4, 22);
-	width: 50%;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-}
-
-/*vertical layout*/
-#body-v {
-	background-color: black;
-	display: flex;
-	flex-direction: column;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	font-weight: bold;
-	color: rgb(255, 226, 164);
-	border: solid 1px rgb(155, 153, 144);
-}
-
-#unitContainer-v {
-	background-color: rgb(9, 4, 22);
-	width: 100%;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-}
-
-.unitMouseoverBox {
-	width: 100%;
-	height: 250px;
-}
-
-.unitMouseoverVideo {
-	width: 100%;
-	height: 100%;
-}
-
-
-/*#tag classes*/
-.unitCard {
-	position: relative;
-	background-color: rgb(11, 11, 14);
-	width: 140px;
-	height: 100px;
-	padding: 0px;
-	margin: 5px;
-	border: solid 1px rgb(69, 63, 148);
-
-}
-
-.card_health_div {
-	position: absolute;
-	top: 0px;
-	right: 0px;
-	width: 20px;
-	padding: 0px;
-	margin: 0px;
-	color: rgb(36, 170, 36);
-}
-
-.card_aa_div {
-	position: absolute;
-	right: 40px;
-	top: 0px;
-	width: 20px;
-	height: 20px;
-}
-
-.cardAAImage {
-	width: 22px;
-	height: 22px;
-}
-
-.cardStatImage {
-	width: 20px;
-	height: 20px;
-	position: absolute;
-	right: 20px;
-	top: 1px;
-	opacity: 80%;
-}
-
-.card_damage_div {
-	position: absolute;
-	top: 20px;
-	right: 0px;
-	width: 20px;
-	padding: 0px;
-	margin: 0px;
-	color: rgb(173, 62, 62)
-}
-
-.card_speed_div {
-	position: absolute;
-	top: 40px;
-	right: 0px;
-	width: 20px;
-	padding: 0px;
-	margin: 0px;
-	color: rgb(207, 209, 67)
-}
-
-.card_range_div {
-	position: absolute;
-	top: 60px;
-	right: 0px;
-	width: 20px;
-	padding: 0px;
-	margin: 0px;
-	color: rgb(119, 144, 255)
-}
-
-.card_name_div {
-	position: absolute;
-	bottom: 0px;
-	left: 0px;
-	padding: 3px;
-	margin: 2px;
-	font-size: small;
-	color: #c0c0db;
-
-	background-color: rgba(15, 14, 19, 0.2);
-}
-
-.card_building_div {
-	position: absolute;
-	top: 3px;
-	left: 25px;
-	right: 40px;
-	padding: 0px;
-	margin: 0px;
-
-	color: #666699;
-	opacity: 80%;
-	font-size: small;
-	font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-	font-weight: 400;
-}
-
-.cardBuildingImage {
-	position: absolute;
-	top: -3px;
-	left: -25px;
-	width: 25px;
-	height: 25px;
-}
-
-.card_unit_img {
-	position: absolute;
-	width: 60px;
-	height: 60px;
-	bottom: 14px;
-	left: 0px;
-	padding: 3px;
-	margin: 2px;
-	color: #666699;
-}
-
-.core {
-	padding: 0px;
-	margin: 0px;
-	color: rgb(165, 167, 105)
-}
-
-.foundry {
-	padding: 0px;
-	margin: 0px;
-	color: rgb(197, 106, 106);
-}
-
-.advancedfoundry {
-	padding: 0px;
-	margin: 0px;
-	color: rgb(156, 60, 60);
-}
-
-.starforge {
-	padding: 0px;
-	margin: 0px;
-	color: rgb(130, 110, 202)
-}
-
-.advancedstarforge {
-	padding: 0px;
-	margin: 0px;
-	color: rgb(98, 119, 212)
-}
-
-.grey {
-	opacity: 30%;
-	background-color: rgb(88, 88, 88);
-}
-
-.deckSlotCell {
-	display: absolute;
-	width: 120px;
-	height: 120px;
-	background-color: rgb(0, 0, 0);
+	margin: 0;
+	padding: 0;
+	font-weight: normal;
 	color: white;
-	font-weight: 100;
+}
+
+a {
+	color: white;
+}
+
+table {
+	margin: 0px;
+	padding: 0px 0px 0px 0px;
+	border-collapse: collapse
+}
+
+th {
+	font-size: 16px;
+	padding: 0px 2px 0px 2px;
+	font-variant: small-caps;
+	background-color: rgba(0, 0, 0, 0);
+	font-weight: 300;
+}
+
+
+td {
+	font-size: 16px;
+	border-width: 1px;
+	border-color: rgba(0, 0, 0, 0.075);
+	border-style: none;
+}
+
+tr {
+	height: 20px;
+}
+
+input {
+	background-color: rgba(0, 0, 0, 0.7);
+	border-width: 1px;
+	color: yellow;
+	font-variant-caps: all-small-caps;
+}
+
+button {
+	font-size: 14px;
+	font-variant: all-small-caps;
+	font-style: bold;
+	background-color: rgba(39, 39, 39, 0.7);
+	color: rgb(255, 255, 255);
+	border-radius: 10px;
+	border-width: 1px;
+	border-color: rgb(255, 255, 255);
+	border-style: double;
+	height: 60%;
+}
+
+select {
+	background-color: rgba(39, 39, 39, 0.7);
+	color: rgb(255, 255, 255);
+	border-radius: 8px;
+	border-width: 1px;
+	border-color: rgb(117, 117, 117);
+	border-style: double;
+	font-variant-caps: all-small-caps;
+	font-style: bold;
+}
+
+
+
+.view {
+	position: absolute;
+	border-width: 1px;
+	border-color: black;
+	border-style: solid;
+}
+
+.view_header {
+	background-color: #000000aa;
+	right: 5px;
+	height: 40px;
+	margin: 5px;
+	border-width: 1px;
+	border-color: black;
+	border-style: solid;
+	display: flex;
+	align-items: center;
+	flex-direction: row;
+
+}
+
+
+.view_content {
+	overflow: inherit;
+	background-color: #000000aa;
+	position: inherit;
+	margin: 5px;
+	left: 0px;
+	right: 0px;
+	top: 48px;
+	bottom: 2px;
+	border-width: 1px;
+	border-color: black;
+	border-style: solid;
+	scrollbar-color: rgba(227, 239, 252, 0.637) rgba(12, 12, 12, 0.445);
+}
+
+.header_element {
+	margin: 5px;
+}
+
+.unit_table_header_image {
+	width: 20px;
+	height: 20px;
+}
+
+
+.unit_table_image {
+	width: 42px;
+	height: 42px;
+
+}
+
+#unitStatsImg {
+	width: 24px;
+	height: 24px;
+	transform: translate(0, 20%);
+}
+
+.chartDiv {
+	background-color: rgba(0, 0, 0, 0.5);
+	width: 92px;
+	height: 36px;
+	margin: 3px;
+	padding: 3px;
+	border-width: 2px;
+	border: none;
+	border-color: white;
+	z-index: 10;
+}
+
+#statsUnitName {
+	position: absolute;
+	border-width: 1px;
+	border: none;
+	left: 10%;
+	bottom: 10%;
+	border-color: rgb(255, 255, 255);
+	background-color: rgba(0, 0, 0, 0.5);
+	padding: 5px 25px 5px 25px;
+	z-index: 10;
+	font-style: bold;
+	font-size: x-large;
+	font-variant: small-caps;
+}
+
+#statsChartContainer {
+	position: absolute;
+	border-width: 1px;
+	border: none;
+	right: 10%;
+	top: 10%;
+	border-color: rgb(0, 0, 0);
+	background-color: rgba(255, 255, 255, 0.185);
+	z-index: 10;
+}
+
+#unitVideo {
+	position: absolute;
+	min-width: 100%;
+	min-height: 100%;
+	max-width: 110%;
+	max-height: 125%;
+	bottom: 0;
+	width: auto;
+	height: auto;
+	overflow: hidden;
+	background-size: cover;
+	z-index: 0;
+	border-width: 1px;
+	border: none;
+	border-color: rgb(255, 255, 255);
+}
+
+.barchart {
+	position: absolute;
+	width: 100px;
+	left: 24px;
+	overflow: hidden;
+}
+
+
+
+#wrapper {
+	position: absolute;
+	background-image: url('images/a1.png');
+	background-position: center center;
+	background-size: cover;
+	border-width: 1px;
+	border-color: white;
+	top: 5px;
+	bottom: 5px;
+	left: 0px;
+	right: 5px;
+	overflow: hidden;
+}
+
+#sidebar {
+	position: absolute;
+	font-size: small;
+	font-variant: small-caps;
+	font-style: bold;
+	height: 100%;
+	background-color: rgba(39, 39, 39, 0.952);
+	top: 0px;
 	bottom: 0px;
-	border: rgb(54, 41, 226) 1px;
-	border-style: outset;
+	left: 0px;
+	right: 0px;
+}
+
+#sidebar_title_div {
+	padding: 10px;
+}
+
+#sidebar_title_div_v {
+	transform: rotate(90deg) translate(30px);
+}
+
+.sidebar_footer_div {
+	position: absolute;
+	bottom: 0px;
+	padding: 5px;
+	font-size: 12px;
+	color: rgb(158, 158, 158);
+}
+
+.extraSmallFont {
+	font-size: 8px;
+}
+
+#toggleSidebarButton {
+	position: relative;
+	font-size: xx-large;
+	height: auto;
+	width: auto;
+	top: 10px;
+	left: 50%;
+	transform: translate(-50%);
+}
+
+#unit_view-h {
+	overflow: auto;
+	background-image: 'images/a1.png';
+	background-color: #cb8e8e88;
+	margin: 3px;
+	right: 50%;
+	left: 0px;
+	top: 0px;
+	bottom: 0px
+}
+
+#deck_view-h {
+	overflow: auto;
+	background-color: #cbc48e88;
+	margin: 3px;
+	left: 50%;
+	top: 0px;
+	right: 0px;
+	bottom: 50%;
+}
+
+#stats_view-h {
+	background-color: #8ecb9988;
+	margin: 3px;
+	left: 50%;
+	top: 50%;
+	right: 0px;
+	bottom: 0px;
+	overflow: hidden;
+}
+
+#unit_view-v {
+	overflow: auto;
+	background-color: #cb8e8e88;
+	margin: 5px;
+	left: 0px;
+	right: 0px;
+	top: 30%;
+	bottom: 30%;
+}
+
+
+#deck_view-v {
+	overflow: auto;
+	background-color: #cbc48e88;
+	margin: 5px;
+	height: 30%;
+	left: 0px;
+	right: 0px;
+	top: 0px
+}
+
+#stats_view-v {
+	background-color: #8ecb9988;
+	margin: 5px;
+	height: 30%;
+	left: 0px;
+	right: 0px;
+	top: 70.%;
+	bottom: 0px;
+	overflow: hidden;
+}
+
+#unit_table_head {
+	position: sticky;
+	background-color: rgba(0, 0, 0, 0.329);
+	top: -1px;
+	height: 30px;
+}
+
+#unit_table_body {
+	top: 30px;
+}
+
+.unit_table_cell {
+	background-color: #00000022;
+	text-align: center;
+}
+
+.unit_table_cell_alt {
+	background-color: #72727222;
+}
+
+.unit_table_image_small {
+	width: 32px;
+	height: 32px;
+}
+
+.unit_table_cell_traits {
+	width: 100px;
+}
+
+.table_add_unit_button {
+	width: 100%;
+	height: 36px;
+	font-style: bold;
+	font-size: 18px;
 }
 
 .deckSlotImage {
-	width: 100px;
-	height: 100px;
+	width: 60px;
+	height: 60px;
+	opacity: 80%;
+	resize: none;
+}
+
+.unit_deck_slot_container_div {
+	width: 300px;
+	height: 150px;
+	border-color: black;
+	border-width: 2px;
+	border-style: solid;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
+
+.unit_deck_slot_div {
+	width: 60px;
+	height: 60px;
+	border-color: black;
+	border-width: 2px;
+	border-style: solid;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	margin: 5px;
+	overflow: hidden;
+}
+
+.unit_deck_slot_div_filled {
+	border-color: green;
+}
+
+.deck_stats_div {
+	font-size: 16px;
+	width: 300px;
+	border: 0px;
+	border-style: solid;
+	padding: 5px;
+}
+
+.deck_stats_table {
+	width: 300px;
+}
+
+.deck_stats_td {
+	padding: 0px;
+	margin: 0px;
+}
+
+#deck2_button {
+	color: grey;
+	border-color: grey;
+}
+
+#compare_button {
+	color: grey;
+	border-color: grey;
+}
+
+#unit_view_card_btn {
+	color: grey;
+	border-color: grey;
+}
+
+.links_div {
+	flex: auto;
+	position: relative;
+}
+
+.links_content {
+	position: inherit;
 }
