hide air ranks for non-air units, select first unit on load

--- a/src/styles.css
+++ b/src/styles.css
@@ -202,13 +202,10 @@ select {
 }
 
 #statsUnitRankDiv {
-	font-style: italic;
 	position: absolute;
 	line-height: 160%;
-	font-weight: 800;
+	font-weight: bold;
 	font-size: 20px;
-	-webkit-text-stroke-width: 2px;
-	-webkit-text-stroke-color: rgba(26, 21, 0, 0.678);
 	top: 0%;
 	padding: 5px;
 	bottom: 0%;
