--- a/src/styles.css
+++ b/src/styles.css
@@ -223,13 +223,21 @@ select {
 	border-width: 1px;
 }
 
+sup {
+	vertical-align: top;
+	font-size: 6px;
+	position: relative;
+	top: -0.5em;
+}
+
 #statsUnitRankDiv {
 	position: absolute;
 	line-height: 160%;
 	font-weight: bold;
-	font-size: 20px;
-	top: 0%;
-	padding: 5px;
+	font-size: 12px;
+	text-align: right;
+	top: 3%;
+	padding: 0px;
 	bottom: 0%;
 	right: 55%;
 	left: 10%;
