--- a/src/styles.css
+++ b/src/styles.css
@@ -65,9 +65,9 @@ button {
 	color: rgb(151, 151, 151);
 	border-radius: 10px;
 	border-width: 1px;
-	border-color: rgb(255, 255, 255);
 	border-style: double;
 	height: 60%;
+	border-color: rgba(150, 150, 150, 0.842);
 }
 
 button:hover {
@@ -80,21 +80,26 @@ button:active {
 }
 
 select {
-	background-color: rgba(39, 39, 39, 0.7);
-	color: rgb(255, 255, 255);
-	border-radius: 8px;
-	border-width: 1px;
-	border-color: rgb(117, 117, 117);
-	border-style: double;
-	font-variant-caps: all-small-caps;
+	font-size: 14px;
+	font-variant: all-small-caps;
 	font-style: bold;
+	background-color: rgba(39, 39, 39, 0.7);
+	color: rgb(151, 151, 151);
+	border-radius: 10px;
+	border-width: 1px;
+	border-style: double;
+	height: 60%;
+	border-color: rgba(150, 150, 150, 0.842);
 }
 
-
+option {
+	color: white;
+}
 
 .view {
 	position: absolute;
 	border-width: 1px;
+	border-color: rgb(95, 82, 47);
 	border-color: rgb(95, 82, 47);
 	border-style: solid;
 }
@@ -125,12 +130,18 @@ select {
 	bottom: 2px;
 	border-width: 2px;
 	border-color: rgb(95, 82, 47);
+	border-width: 2px;
+	border-color: rgb(95, 82, 47);
 	border-style: solid;
 	scrollbar-color: rgba(227, 239, 252, 0.637) rgba(12, 12, 12, 0.445);
 }
 
 .header_element {
 	margin: 5px;
+}
+
+.unit_table {
+	width: 100%;
 }
 
 .unit_table {
@@ -229,8 +240,11 @@ select {
 .comparisonChartContainer {
 	position: relative;
 	display: flex;
+	flex-shrink: 5;
 	flex-direction: row;
 	height: 100%;
+	width: 100%;
+
 	background-color: rgba(0, 0, 0, 0.192);
 	justify-content: space-evenly;
 
@@ -240,6 +254,7 @@ select {
 	border: dashed;
 	border-width: 1px;
 	border-color: rgba(192, 162, 81, 0.205);
+	width: 100px;
 }
 
 sup {
@@ -398,6 +413,11 @@ sup {
 	right: 0;
 	top: 0;
 	bottom: 60.5%;
+	margin: 0;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 60.5%;
 }
 
 
@@ -409,12 +429,22 @@ sup {
 	left: 0;
 	right: 0;
 	top: 40%;
+	margin: 0;
+	height: 29.5%;
+	left: 0;
+	right: 0;
+	top: 40%;
 }
 
 #stats_view-v {
 	background-color: #8ecb9988;
 	margin: 0;
+	margin: 0;
 	height: 30%;
+	left: 0;
+	right: 0;
+	top: 70%;
+	bottom: 0;
 	left: 0;
 	right: 0;
 	top: 70%;
@@ -424,6 +454,7 @@ sup {
 
 #unit_table_head {
 	position: sticky;
+	background-color: rgba(0, 0, 0, 0.623);
 	background-color: rgba(0, 0, 0, 0.623);
 	top: -1px;
 	height: 30px;
@@ -449,7 +480,7 @@ sup {
 
 #deck_content {
 	padding: 2%;
-	background-color: rgba(5, 1, 66, 0.678);
+	background-color: rgba(5, 1, 66, 0.685);
 	border: dotted;
 	border-width: 0px;
 	display: flex;
@@ -478,25 +509,24 @@ sup {
 .deckSlotContainer {
 	width: 300px;
 	height: 150px;
-	border-color: rgb(2, 1, 90);
-	border-width: 4px;
-	border-style: solid;
 	display: flex;
+	padding: 4px;
 	flex-direction: row;
 	flex-wrap: wrap;
 }
 
 .deckContainer {
 	width: 310px;
+	height: fit-content;
 	bottom: 10px;
-	border-color: rgb(35, 179, 71);
-	border-width: 2px;
-	border-style: none;
+	border-color: rgb(2, 1, 90);
+	border-width: 1px;
+	border-style: solid;
 	overflow: hidden;
 }
 
-.deck2Container {
-	border-color: rgb(92, 13, 13);
+.deckContainerActive {
+	border-color: rgb(192, 162, 81);
 }
 
 .unit_deck_slot_div {
@@ -571,6 +601,10 @@ sup {
 .links_content {
 	position: inherit;
 	color: grey;
+}
+
+.selected {
+	color: rgb(192, 162, 81);
 }
 
 .selected {
