--- a/src/styles.css
+++ b/src/styles.css
@@ -62,12 +62,12 @@ button {
 	font-variant: all-small-caps;
 	font-style: bold;
 	background-color: rgba(39, 39, 39, 0.7);
-	color: rgb(151, 151, 151);
+	color: rgb(216, 216, 216);
 	border-radius: 10px;
 	border-width: 1px;
 	border-style: double;
 	height: 60%;
-	border-color: rgba(150, 150, 150, 0.842);
+	border-color: rgb(180, 180, 180);
 }
 
 button:hover {
@@ -84,12 +84,12 @@ select {
 	font-variant: all-small-caps;
 	font-style: bold;
 	background-color: rgba(39, 39, 39, 0.7);
-	color: rgb(151, 151, 151);
+	color: rgb(192, 162, 81);
 	border-radius: 10px;
 	border-width: 1px;
 	border-style: double;
 	height: 60%;
-	border-color: rgba(150, 150, 150, 0.842);
+	border-color: rgb(180, 180, 180);
 }
 
 option {
