--- a/src/styles.css
+++ b/src/styles.css
@@ -32,8 +32,13 @@ th {
 
 td {
 	border-width: 1px;
-	border-color: rgba(0, 0, 0, 0.075);
+	border-color: rgb(255, 255, 255);
 	border-style: none;
+	padding: 0 0 0 0;
+}
+
+.simpleStatsPadding {
+	padding: 0 10px 0 10px;
 }
 
 #sidebarLogoImg {
@@ -58,11 +63,12 @@ input {
 
 
 button {
+	color: rgb(199, 199, 199);
 	font-size: 14px;
 	font-variant: all-small-caps;
 	font-style: bold;
+	margin: 5px;
 	background-color: rgba(39, 39, 39, 0.7);
-	color: rgb(216, 216, 216);
 	border-radius: 10px;
 	border-width: 1px;
 	border-style: double;
@@ -80,11 +86,8 @@ button:active {
 }
 
 select {
-	font-size: 14px;
-	font-variant: all-small-caps;
-	font-style: bold;
 	background-color: rgba(39, 39, 39, 0.7);
-	color: rgb(192, 162, 81);
+	color: rgb(189, 173, 128);
 	border-radius: 10px;
 	border-width: 1px;
 	border-style: double;
@@ -137,11 +140,11 @@ option {
 }
 
 .header_element {
+	color: rgb(199, 199, 199);
+	font-size: 14px;
+	font-variant: all-small-caps;
+	font-style: bold;
 	margin: 5px;
-}
-
-.unit_table {
-	width: 100%;
 }
 
 .unit_table {
@@ -153,11 +156,44 @@ option {
 	height: 20px;
 }
 
-
 .unit_table_image {
-	width: 42px;
-	height: 42px;
+	width: 48px;
+	height: 48px;
 
+}
+
+.unit_table_image_medium {
+	width: 36px;
+	height: 36px;
+}
+
+.unit_table_image_small {
+	width: 28px;
+	height: 28px;
+}
+
+.unit_table_smalltext {
+	font-size: 9px;
+}
+
+.unit_table_cell {
+	background-color: #00000022;
+	text-align: center;
+}
+
+.unit_table_cell_alt {
+	background-color: #72727222;
+}
+
+.unit_table_cell_traits {
+	width: 100px;
+}
+
+.table_add_unit_button {
+	width: 100%;
+	height: 36px;
+	font-style: bold;
+	font-size: 18px;
 }
 
 #unitStatsImg {
@@ -464,20 +500,6 @@ sup {
 	top: 30px;
 }
 
-.unit_table_cell {
-	background-color: #00000022;
-	text-align: center;
-}
-
-.unit_table_cell_alt {
-	background-color: #72727222;
-}
-
-.unit_table_image_small {
-	width: 24px;
-	height: 24px;
-}
-
 #deck_content {
 	padding: 2%;
 	background-color: rgba(5, 1, 66, 0.685);
@@ -488,16 +510,6 @@ sup {
 	justify-content: space-evenly;
 }
 
-.unit_table_cell_traits {
-	width: 100px;
-}
-
-.table_add_unit_button {
-	width: 100%;
-	height: 36px;
-	font-style: bold;
-	font-size: 18px;
-}
 
 .deckSlotImage {
 	width: 60px;
