--- a/src/styles.css
+++ b/src/styles.css
@@ -43,7 +43,7 @@ td {
 
 #sidebarLogoImg {
 	width: 100%;
-	opacity: 20%;
+	opacity: 80%;
 }
 
 tr {
@@ -361,7 +361,8 @@ sup {
 	font-style: bold;
 	height: 100%;
 	float: left;
-	background-color: rgba(39, 39, 39, 0.952);
+	background-color: rgba(8, 8, 10, 0.596);
+	box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
 }
 
 #app {
@@ -501,36 +502,27 @@ sup {
 }
 
 #deck_content {
-	padding: 2%;
+	padding: 10 0 10 0;
 	background-color: rgba(5, 1, 66, 0.685);
 	border: dotted;
 	border-width: 0px;
 	display: flex;
-	flex-flow: row;
+	flex-direction: row;
+	align-items: center;
 	justify-content: space-evenly;
 }
 
 
 .deckSlotImage {
-	width: 60px;
-	height: 60px;
+	width: 100%;
+	height: 100%;
 	opacity: 80%;
 	resize: none;
 }
 
-.deckSlotContainer {
-	width: 300px;
-	height: 150px;
-	display: flex;
-	padding: 4px;
-	flex-direction: row;
-	flex-wrap: wrap;
-}
-
 .deckContainer {
-	width: 310px;
-	height: fit-content;
-	bottom: 10px;
+	width: 48%;
+	height: 100%;
 	border-color: rgb(2, 1, 90);
 	border-width: 1px;
 	border-style: solid;
@@ -541,16 +533,23 @@ sup {
 	border-color: rgb(192, 162, 81);
 }
 
+.deckSlotContainer {
+	width: 100%;
+	height: fit-content;
+	margin: 5 0 5 0;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	align-items: center;
+	flex-wrap: wrap;
+}
+
 .unit_deck_slot_div {
-	width: 60px;
-	height: 60px;
+	width: 19%;
 	border-color: rgba(2, 0, 36, 0.781);
 	border-width: 2px;
 	border-style: solid;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	margin: 5px;
+	margin: 1%;
 	overflow: hidden;
 }
 
