fix official unit page link

--- a/src/styles.css
+++ b/src/styles.css
@@ -263,6 +263,14 @@ option {
 	font-variant: small-caps;
 }
 
+#unitOfficialLinkDiv {
+	position: absolute;
+	right: 0%;
+	bottom: 0%;
+	background-color: rgba(0, 0, 0, 0.5);
+	z-index: 200;
+}
+
 #statsUnitEnergyValue {
 	color: rgb(68, 140, 233);
 }
